# LSPP60days-Challenge

./: .gitattributes  .gitignore  =3.20  LICENSE  README.md  tempCodeRunnerFile.python
DAY_10/: Cargo.toml
DAY_10/src/: main.rs  math_generic.rs  traits_demo.rs
DAY_11/: Cargo.toml  todos.json
DAY_11/src/: main.rs  storage.rs  todo.rs
DAY_12/: Cargo.toml
DAY_12/calclib/: Cargo.toml  README.md
DAY_12/calclib/src/: lib.rs
DAY_12/calclib_rustx/: Cargo.toml
DAY_12/calculator_app/: Cargo.toml
DAY_12/xrust_calclib/: README.md
DAY_13/: Cargo.toml
DAY_13/src/: lib.rs  main.rs
DAY_14/: Cargo.toml
DAY_14/rust-proc-macro/: Cargo.toml
DAY_15/async_client/: Cargo.toml
DAY_16/: Cargo.toml
DAY_16/src/: main.rs
DAY_17/: Cargo.toml
DAY_17/c_lib/: adder.c  adder.h  strutils.c  strutils.h
DAY_17/day17_unsafe_ffi/: Cargo.toml  build.rs
DAY_17/demo/: Cargo.toml
DAY_17/src/: lib.rs  main.rs
DAY_18/: Cargo.toml
DAY_18/counter_wasm/: Cargo.toml
DAY_18/web-demo/: index.html  package-lock.json  package.json  styles.css
DAY_19/: Cargo.toml
DAY_19/blink_qemu/: Cargo.toml  build.rs  link.x
DAY_19/blink_qemu/.cargo/: config.toml.bak
DAY_19/blink_qemu/src/: main.rs
DAY_19/blink_simulator/: Cargo.toml
DAY_2/: Cargo.toml
DAY_2/src/: main.rs
DAY_20/: Cargo.toml
DAY_20/final_web_server/: Cargo.toml
DAY_21/: Cargo.toml
DAY_21/src/: main.rs
DAY_23/: Cargo.toml
DAY_23/.cargo/: config.toml
DAY_23/src/: device.rs  main.rs
DAY_25/: Cargo.toml  avr-atmega328p.json
DAY_25/.cargo/: config.toml
DAY_25/src/: main.rs
DAY_3/: Cargo.toml
DAY_3/src/: main.rs
DAY_4/: Cargo.toml
DAY_4/src/: main.rs
DAY_5/: Cargo.toml
DAY_5/src/: main.rs
DAY_6/: Cargo.toml
DAY_6/src/: main.rs
DAY_7/: Cargo.toml
DAY_7/src/: lib.rs  main.rs
DAY_8/: Cargo.toml
DAY_8/day8_paths/: Cargo.toml
DAY_8/src/: lib.rs  main.rs  utils.rs
DAY_9/: Cargo.toml
DAY_9/src/: main.rs  math.rs
data/: clean_music.csv  user_plays.csv
day-25/: Cargo.toml
day-26/: Cargo.toml
day-26/src/: main.rs
day-28/: Cargo.toml  Ravedude.toml
day-28/src/: main.rs
day-29/: Ravedude.toml
day-29/src/: main.rs
day-30/: Cargo.toml
day-30/src/: main.rs
day-31/: main.py
day-32/: main.py
day-33/: main.py
day-33/data/: music.csv
day-34/: eda.py
day-35/: train_test_spilt.py
day-36/models/: linear_models.py
day-37/models/: decision_trees.py
day-38/models/: unsupervised.py
day-50/: app.py
day-51/: Dockerfile  docker-compose.yml
day-59/: app.py
day-60/: Dockerfile  README.md
day_23/: Cargo.toml
day_24/: Cargo.toml
day_24/src/: main.rs
h_rust/: Cargo.toml
(+78 files in other folders)
