[package]
name = "DAY_23"
version = "0.1.0"
edition = "2018"
authors = ["Me"]

[dependencies]
# Match the PAC’s runtime (cortex-m-rt 0.6.x)
cortex-m             = "0.6.7"
cortex-m-rt          = "0.6.15"
cortex-m-semihosting = "0.3.7"
panic-halt           = "0.2.0"

# STM32F1 PAC crate
stm32f103xx          = { version = "0.11.0", features = ["rt"] }

[[bin]]
name = "DAY_23"
path = "src/main.rs"

[profile.release]
codegen-units = 1
debug         = true
lto           = true

[features]
default = ["device"]
device = []
