[package]
name = "blink_qemu"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
cortex-m        = "0.7"
cortex-m-rt     = "0.7"
cortex-m-semihosting = "0.5.0"
panic-halt      = "1.0.0"

[profile.dev]
panic = "abort"
opt-level = "z"

[profile.release]
panic = "abort"
opt-level = "z"

[build-dependencies]
# no build script dependencies
